fixed overflow in mobile

--- a/NextJs/client/components/App/App.module.css
+++ b/NextJs/client/components/App/App.module.css
@@ -1,13 +1,10 @@
-
-
-
 .overarching{
   position: relative;
   width: 100%;
   height: 100%;
   padding: 0;
   margin: 0;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
 
