--- a/NextJs/client/styles/globals.css
+++ b/NextJs/client/styles/globals.css
@@ -5,16 +5,16 @@
   --tertiary-color: #b1b1b1;
   /* --font-color: #D4AF37; */
   --font-color: #ffffff;
+
 }
-html,
-body {
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  height: 100%;
-  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
+
+body{
+  margin: 0px;
+  padding: 0px;
 }
+
+
+
 
 /* a {
   color: inherit;
